--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,12 @@
     -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap-reboot.min.css"
     integrity="sha256-pz64SJ9vnWkyhtOo7mtiOekWuFo7YIGXrzXjElYzcWA=" crossorigin="anonymous" />
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
-  <script src="https://unpkg.com/react-router/umd/react-router.min.js"></script>
-  <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
+  
+  <script crossorigin src="https://unpkg.com/react@16.2.0/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@16.2.0/umd/react-dom.development.js"></script>
+    <script crossorigin src="https://unpkg.com/prop-types@15.6.1/prop-types.js"></script>
+    <script src="https://unpkg.com/react-router@4.2.0/umd/react-router.min.js"></script>
+    <script src="https://unpkg.com/react-router-dom@4.2.2/umd/react-router-dom.min.js"></script>
   <title>awesome-template-ts</title>
 </head>
 
